--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NITCeMagazine"
         tools:targetApi="31">
-        <activity android:name=".ForgotPassword"
+        <activity android:name=".LoginAndSignUp.ForgotPassword"
             android:exported="false"/>
         <activity
             android:name=".add_Editor_Reviewer"
@@ -26,16 +26,13 @@
             android:name=".MainActivityPages.MainActivity2"
             android:exported="false" />
         <activity
-            android:name=".SignUpPage"
+            android:name=".LoginAndSignUp.SignUpPage"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".LoginAndSignUp.LoginActivity"
             android:exported="true">
 
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
 
         <activity
             android:name=".getStarted.splashScreen"
