--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,19 +21,16 @@
             android:name=".EditorPage"
             android:exported="false" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".MainActivityPages.MainActivity2"
             android:exported="false" />
         <activity
-            android:name=".SignUpPage"
+            android:name=".LoginAndSignUp.SignUpPage"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".LoginAndSignUp.LoginActivity"
             android:exported="true">
 
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
 
         <activity
             android:name=".getStarted.splashScreen"
