--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,14 @@
         android:theme="@style/Theme.NITCeMagazine"
         tools:targetApi="31">
         <activity
-            android:name=".add_Editor_Reviewer"
-            android:exported="false" />
+            android:name=".AddReviewer"
+            android:exported="true" >
+
+
+        </activity>
+        <activity
+            android:name=".AddEditor"
+            android:exported="true" />
         <activity
             android:name=".ReviewerPage"
             android:exported="false" />
@@ -25,7 +31,15 @@
             android:exported="false" />
         <activity
             android:name=".LoginAndSignUp.SignUpPage"
-            android:exported="false" />
+            android:exported="true" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
         <activity
             android:name=".LoginAndSignUp.LoginActivity"
             android:exported="true">
@@ -35,11 +49,7 @@
         <activity
             android:name=".getStarted.splashScreen"
             android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".getStarted.getStartedPage"
