review page complete

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,10 @@
         <activity
             android:name=".ViewArticle"
             android:exported="true" />
+
+        <activity
+            android:name=".UnpostedArticles"
+            android:exported="true" />
     </application>
 
 </manifest>
