--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -10,23 +10,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.NITCeMagazine"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".AddReviewer"
+            android:name=".ReviewUnpostedArticle.ReviewUnpostedArticles"
+            android:exported="false" />
+        <activity
+            android:name=".AddReviewerAndEditor.AddReviewer"
             android:exported="true" >
-
-
         </activity>
         <activity
-            android:name=".AddEditor"
+            android:name=".AddReviewerAndEditor.AddEditor"
             android:exported="true" />
         <activity
-            android:name=".ReviewerPage"
-            android:exported="true">
-
+            android:name=".ReviewUnpostedArticle.ReviewerPage"
+            android:exported="true" >
         </activity>
         <activity
-            android:name=".EditorPage"
+            android:name=".PostUnpostedArticle.EditorPage"
             android:exported="false" />
         <activity
             android:name=".MainActivityPages.MainActivity2"
@@ -34,16 +34,11 @@
         <activity
             android:name=".LoginAndSignUp.SignUpPage"
             android:exported="true" >
-
-
-
         </activity>
         <activity
             android:name=".LoginAndSignUp.LoginActivity"
-            android:exported="true">
-
+            android:exported="true" >
         </activity>
-
         <activity
             android:name=".getStarted.splashScreen"
             android:exported="true" >
@@ -56,13 +51,11 @@
         <activity
             android:name=".getStarted.getStartedPage"
             android:exported="true" />
-
         <activity
-            android:name=".ViewArticle"
+            android:name=".Fragments.ViewArticle"
             android:exported="true" />
-
         <activity
-            android:name=".UnpostedArticles"
+            android:name=".PostUnpostedArticle.PostUnpostedArticles"
             android:exported="true" />
     </application>
 
