--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+
+    packagingOptions{
+        exclude 'com/itexpdf/io/font/cmap_info.txt'
+        exclude 'com/itexpdf/io/font/cmap/*'
+
+    }
 }
+
+
 
 dependencies {
 
@@ -43,6 +52,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.itextpdf:itextg:5.5.10'
+//    implementation 'com.itextpdf:itext7-core:7.1.12'
+
+//    implementation group: 'com.itextpdf', name: 'itext7-core', version: '7.0.4', ext: 'pom'
+
 
 
 }
