--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,21 +12,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.NITCeMagazine"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".DeleteArticle"
+            android:exported="false" />
         <activity
             android:name=".ReviewUnpostedArticle.ReviewUnpostedArticles"
             android:exported="false" />
         <activity
             android:name=".AddReviewerAndEditor.AddReviewer"
-            android:exported="true" >
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".AddReviewerAndEditor.AddEditor"
             android:exported="true" />
         <activity
             android:name=".ReviewUnpostedArticle.ReviewerPage"
-            android:exported="true" >
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".PostUnpostedArticle.EditorPage"
             android:exported="false" />
@@ -34,15 +36,13 @@
             android:exported="false" />
         <activity
             android:name=".LoginAndSignUp.SignUpPage"
-            android:exported="true" >
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".LoginAndSignUp.LoginActivity"
-            android:exported="true" >
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".getStarted.splashScreen"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
