--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.NITCeMagazine"
         tools:targetApi="31">
         <activity
+            android:name=".AddReviewerAndEditor.DeleteReviewer"
+            android:exported="false" />
+        <activity
             android:name=".DeleteArticle"
             android:exported="false" />
         <activity
@@ -21,13 +24,13 @@
             android:exported="false" />
         <activity
             android:name=".AddReviewerAndEditor.AddReviewer"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".AddReviewerAndEditor.AddEditor"
             android:exported="true" />
         <activity
             android:name=".ReviewUnpostedArticle.ReviewerPage"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".PostUnpostedArticle.EditorPage"
             android:exported="false" />
@@ -36,10 +39,10 @@
             android:exported="false" />
         <activity
             android:name=".LoginAndSignUp.SignUpPage"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".LoginAndSignUp.LoginActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".getStarted.splashScreen"
             android:exported="true">
@@ -51,6 +54,9 @@
         </activity>
         <activity
             android:name=".getStarted.getStartedPage"
+            android:exported="true" />
+        <activity
+            android:name=".LoginAndSignUp.ForgotPassword"
             android:exported="true" />
         <activity
             android:name=".Fragments.ViewArticle"
