--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.itextpdf:itextg:5.5.10'
-//    implementation 'com.itextpdf:itext7-core:7.1.12'
+    implementation 'com.itextpdf:itext7-core:7.1.12'
 
 //    implementation group: 'com.itextpdf', name: 'itext7-core', version: '7.0.4', ext: 'pom'
 
