--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.NITCeMagazine"
         tools:targetApi="31">
         <activity
+            android:name=".RejectedArticle.RejectedArticleViewArticle"
+            android:exported="false" />
+        <activity
+            android:name=".RejectedArticle.RejectedArticle"
+            android:exported="false" />
+        <activity
             android:name=".MyArticles.ViewMyArticle"
             android:exported="false" />
         <activity
