--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,7 +85,7 @@
             android:exported="true" />
 
         <service
-            android:name=".FirebaseMessagingService"
+            android:name=".Notification.FirebaseMessagingService"
             android:permission="TODO"
             tools:ignore="ExportedService"
             android:exported="true">
