--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
+        android:screenOrientation="portrait"
         android:theme="@style/Theme.NITCeMagazine"
         tools:targetApi="31">
         <activity
