--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,13 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/mage_logo"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:screenOrientation="portrait"
         android:theme="@style/Theme.NITCeMagazine"
+        android:screenOrientation="portrait"
         tools:targetApi="31">
         <activity
             android:name=".RejectedArticle.RejectedArticleViewArticle"
