--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.itextpdf:itextg:5.5.10'
     implementation 'com.itextpdf:itext7-core:7.1.12'
-
+    implementation 'androidx.fragment:fragment-ktx:1.2.2'
     implementation 'com.android.volley:volley:1.2.1'
 
 
